Bumped up dev version for maven repo update